--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/meeting?useSSL=false&serverTimezone=Asia/Seoul
+    url: jdbc:mysql://localhost:3306
     username: root
-    password: mysecretpassword
+    password:
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
